--- a/deb/virtual-pen-linux-host_0.1-1_amd64/usr/share/applications/android-pen-emulator.desktop
+++ b/deb/virtual-pen-linux-host_0.1-1_amd64/usr/share/applications/android-pen-emulator.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
-Name=Android Pen Emulator
-Comment=Emulate android pen on your desktop
-TryExec=/usr/bin/pen-emulator-linux-host
-Exec=pen-emulator-linux-host
+Name=Virtual Pen
+Comment=Receives pen input from Android tablets
+TryExec=/usr/bin/virtual-pen-linux-host
+Exec=virtual-pen-linux-host
 Terminal=false
-Icon=android-pen-emulator
+Icon=virtual-pen
 Categories=Office;Graphics;Education;Presentation;
