--- a/flatpak/io.github.androidvirtualpen.virtualpen.desktop
+++ b/flatpak/io.github.androidvirtualpen.virtualpen.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
-Name=Virtual Pen
+Name=Android Virtual Pen
 Comment=Receives pen input from Android tablets
 TryExec=virtual-pen-linux-host
 Exec=virtual-pen-linux-host
 Terminal=false
-Icon=org.flatpak.virtualpen
+Icon=io.github.androidvirtualpen.virtualpen
 Categories=Office;Graphics;Education;Presentation;
