--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ flatpak/repo
 libusb-1.0.so.0
 *.zip
 *.dm
+deb/virtual-pen-linux-host_0.1-1_amd64.deb
+deb/virtual-pen-linux-host_0.1-1_amd64/usr/bin/virtual-pen-linux-host
