--- a/virtual-pen-linux-host/CMakeLists.txt
+++ b/virtual-pen-linux-host/CMakeLists.txt
@@ -66,6 +66,10 @@ install(TARGETS virtual-pen-linux-host
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
+install(FILES resources/io.github.androidvirtualpen.virtualpen.desktop DESTINATION /usr/share/applications/)
+install(FILES resources/io.github.androidvirtualpen.virtualpen.svg DESTINATION /usr/share/icons/hicolor/scalable/apps/)
+install(FILES resources/io.github.androidvirtualpen.virtualpen.metainfo.xml DESTINATION /usr/share/metainfo/)
+
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(virtual-pen-linux-host)
 endif()
