--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 *~
 .#*
 .lock
-flatpak/.flatpak-builder
-flatpak/builddir
-flatpak/export
-flatpak/repo
-libusb-1.0.so.0
+CMakeFiles
+.gitmodules
+CMakeCache.txt
+Makefile
+.qt
+cmake_install.cmake
+*.aab
 *.zip
 *.dm
 deb/virtual-pen-linux-host_0.1-1_amd64.deb
